sort by name and price were already done